--- a/User_Service/src/main/resources/application.properties
+++ b/User_Service/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=User_Service
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/userdatabase
+spring.datasource.username=root
+spring.datasource.password=qwerty
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.connection.autocommit=false
