adding dockerfile and updates

--- a/User_Service/src/main/resources/application.properties
+++ b/User_Service/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=User_Service
+server.port=8081
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/userdatabase
+#spring.datasource.url=jdbc:mysql://localhost:3308/userdatabase
+spring.datasource.url=jdbc:mysql://mysql_users:3306/userdatabase
 spring.datasource.username=root
 spring.datasource.password=qwerty
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.connection.autocommit=false
+security.basic.enabled = false
