--- a/User_Service/build.gradle
+++ b/User_Service/build.gradle
@@ -24,8 +24,12 @@ repositories {
 }
 
 dependencies {
+//	implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.7'
+
+	implementation 'mysql:mysql-connector-java:8.0.33'
+	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
+//	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.jetbrains:annotations:24.0.0'
