adding Authentication and Authorization, UnitTests, RabbitMQ

--- a/User_Service/src/docker-compose.yml
+++ b/User_Service/src/docker-compose.yml
@@ -11,19 +11,32 @@ services:
     volumes:
       - mysql_users_data:/var/lib/mysql
       - ./mysql-init-users:/docker-entrypoint-initdb.d
+    networks:
+      - db-users-net
 
 
   userservice:
-    image: user-service:0.0.1
+    image: userservice:0.0.3
     container_name: userservice_app
     ports:
       - "8083:8081"
     environment:
       # Use the MySQL container's service name and internal port.
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/userdatabase
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql_users:3306/userdatabase
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: qwerty
     depends_on:
       - mysql
+
+    networks:
+      - broker-net
+      - db-users-net
 volumes:
   mysql_users_data:
+networks:
+  # your existing rabbit network
+  broker-net:
+    external: true
+
+  db-users-net: # new internal network
+    driver: bridge
