--- a/User_Service/build.gradle
+++ b/User_Service/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.4.3'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id "org.sonarqube" version "6.2.0.5505"
 }
 
 group = 'com.example'
@@ -10,6 +11,14 @@ version = '0.0.1-SNAPSHOT'
 java {
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(21)
+	}
+}
+
+sonar {
+	properties {
+		property "sonar.projectKey", "ReFL21_AS7_UserService"
+		property "sonar.organization", "refl21"
+		property "sonar.host.url", "https://sonarcloud.io"
 	}
 }
 
