--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -43,4 +43,6 @@ jobs:
         run: |
           cd User_Service
           chmod +x gradlew  # Fix permission error
-          ./gradlew build sonar --info
+           ./gradlew clean build test jacocoTestReport
+          # Run SonarQube analysis, specifying the JaCoCo report path
+          ./gradlew sonar --info -Dsonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
