--- a/User_Service/build.gradle
+++ b/User_Service/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'org.springframework.boot' version '3.4.3'
 	id 'io.spring.dependency-management' version '1.1.7'
 	id "org.sonarqube" version "6.2.0.5505"
+	id 'jacoco'
 }
 
 group = 'com.example'
@@ -12,6 +13,10 @@ java {
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(21)
 	}
+}
+
+jacoco {
+	toolVersion = "0.8.11"
 }
 
 sonar {
@@ -58,4 +63,12 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	finalizedBy jacocoTestReport
+}
+jacocoTestReport {
+	dependsOn test // Run tests before generating report
+	reports {
+		xml.required = true // Important for SonarQube
+		html.required = false
+	}
 }
