--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
-name: Java CI with Gradle
+name: Java CI with Gradle and Docker Hub Push
 
 on:
   push:
@@ -15,7 +15,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -28,13 +27,10 @@ jobs:
         java-version: '21'
         distribution: 'temurin'
 
-    # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
-    # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
     - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+      uses: gradle/actions/setup-gradle@v4
       with:
         gradle-version: '8.5'
-
 
     - name: Build with list file structure
       run: ls
@@ -46,6 +42,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+
     steps:
     - uses: actions/checkout@v4
     - name: Set up JDK 21
@@ -54,30 +51,43 @@ jobs:
         java-version: '21'
         distribution: 'temurin'
 
-    # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
-    # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
     - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+      uses: gradle/actions/setup-gradle@v4
       with:
         gradle-version: '8.5'
+
     - name: Build with Gradle 8.5
       run: gradle -p User_Service build
+
     - name: Tests Gradle 8.5
       run: gradle -p User_Service test
-#    - name: Grant execute permission
-#      run: chmod +x ./E-Commerce_Application/gradlew
-#
-#    - name: Build with Gradle Wrapper
-#      run: ./E-Commerce_Application/gradlew build
 
+  dockerhub-push:
+    needs: build  # Runs after the build job completes
+    runs-on: ubuntu-latest
 
-#  dependency-submission:
-#
-#    runs-on: ubuntu-latest
-#    permissions:
-#      contents: write
-#
-#    steps:
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_TOKEN }}
+
+    - name: Extract Git SHA
+      id: vars
+      run: echo "GIT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+
+    - name: Build and Push UserService Docker Image
+      uses: docker/build-push-action@v5
+      with:
+        context: ./User_Service  # Adjust if your Dockerfile is located elsewhere
+        push: true
+        tags: |
+          refl21/userservicerepo:${{ env.GIT_SHA }}
+          refl21/userservicerepo:latest
+
 #    - uses: actions/checkout@v4
 #    - name: Set up JDK 21
 #      uses: actions/setup-java@v4
