--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,6 +69,12 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Build UserService with Gradle
+      run: gradle -p User_Service build
+
+    - name: Copy JAR to Docker context
+      run: cp User_Service/build/libs/*.jar User_Service/    
+
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
