--- a/User_Service/src/main/resources/application.properties
+++ b/User_Service/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.connection.autocommit=false
 jwt.secret=JdSIKhi9NXIopjFf8jYPiLmiuOd3PiU5tWCl94sf/2g=
 jwt.expiration-ms=36000000
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
