--- a/User_Service/build.gradle
+++ b/User_Service/build.gradle
@@ -59,6 +59,9 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation("org.mockito:mockito-core:5.4.0")
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'io.micrometer:micrometer-registry-prometheus'
+	testImplementation 'com.h2database:h2'
 }
 
 tasks.named('test') {
