--- a/User_Service/src/main/resources/application.properties
+++ b/User_Service/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=User_Service
 server.port=8081
 spring.jpa.hibernate.ddl-auto=none
-#spring.datasource.url=jdbc:mysql://localhost:3308/userdatabase
-spring.datasource.url=jdbc:mysql://mysql_users:3306/userdatabase
+spring.datasource.url=jdbc:mysql://localhost:3308/userdatabase
+#spring.datasource.url=jdbc:mysql://mysql_users:3306/userdatabase
 spring.datasource.username=root
 spring.datasource.password=qwerty
 spring.jpa.open-in-view=false
@@ -14,3 +14,5 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.access=read-only
